--- a/projects/projects.json
+++ b/projects/projects.json
@@ -40,9 +40,9 @@
     }
   },
   {
-    "name": "Instagram MERN",
+    "name": "Weather App",
     "desc": "Full-Stack Instagram clone built using MERN stack and realtime chat with the help of socket.iO",
-    "image": "instagrammern",
+    "image": "weather",
     "category": "mern",
     "links": {
       "view": "https://instagramernstack.herokuapp.com/",
