--- a/projects/projects.json
+++ b/projects/projects.json
@@ -50,8 +50,8 @@
     }
   },
   {
-    "name": "Flipkart MERN",
-    "desc": "Full-Stack Flipkart with Admin Dashboard and Paytm Payment Gateway. MERN Stack WebApp, ready to use for business.",
+    "name": "Chatbot",
+    "desc": "Using Gemini API, this chatbot can be one of your great assistants that's ever lived.",
     "image": "flipkartmern",
     "category": "mern",
     "links": {
